Amélioration de la visibilité et correction du footer

--- a/style.css
+++ b/style.css
@@ -775,12 +775,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFF!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #111!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -1041,7 +1041,7 @@ h4 {
     }
 }
 
-/*  */
+/* corrections */
 
   .avis p {
     color: rgb(87, 87, 87);
@@ -1054,4 +1054,15 @@ h4 {
   .avisRedacteur {
     font-weight: 400;
     font-size: 13px;
+  }
+  
+  h1{
+      color: white;
+  }
+  .black {
+    color: black!important;
+}
+
+  .col-sm-3{
+      margin-bottom: 20px;
   }
